feat: Create initial Gazebo Stove ESPHome configuration
- Implement [gazebo_stove.yaml](cci:7://file:///Users/michel/Documents/Electronics/Projects/GazeboStove/gazebo_stove.yaml:0:0-0:0) with thermostat, DS18B20, and Nextion display support.
- Update [Docs/FEATURE_MAPPING.md](cci:7://file:///Users/michel/Documents/Electronics/Projects/GazeboStove/Docs/FEATURE_MAPPING.md:0:0-0:0) with corrected Nextion lambda syntax and missing global variable definitions.
- Configure thermostat presets for heating control.
- Add sensor malfunction detection logic.

--- a/includes/core.yaml
+++ b/includes/core.yaml
@@ -15,6 +15,7 @@ esphome:
             wifi.connected:
           timeout: 30s
       - logger.log: "WiFi connected, initializing components"
+      - script.execute: init_nextion
 
 # ============================================================================
 # BOARD SELECTION & CONFIGURATION
