--- a/includes/hardware 2.yaml
+++ b/includes/hardware 2.yaml
@@ -57,38 +57,41 @@ switch:
     id: manual_run
     icon: "mdi:fire-alert"
     restore_mode: ALWAYS_OFF
+    optimistic: true
     assumed_state: false
-    lambda: |-
-      // Switch state is controlled by manual_run_active global variable
-      return id(manual_run_active);
     turn_on_action:
       then:
         - if:
             condition:
-              lambda: 'return id(manual_stop_active);'
+              lambda: |-
+                // Priority 2: Check if Force Off (Priority 1) is active
+                return id(manual_stop_active);
             then:
-              - logger.log: "Cannot enable Manual Run: Manual Stop is active."
-              # Turn the switch back off immediately in the UI to reflect that the action was rejected
-              - switch.turn_off: manual_run
-            else:
-              - logger.log: "Manual Run enabled - 15 minute emergency heating"
+              # Force Off is active - block Emergency Heat (momentary switch behavior)
+              - logger.log: "Emergency Heat blocked by Force Off - switch is momentary only"
+              - delay: 100ms  # Brief delay to allow switch state to register
               - lambda: |-
-                  id(manual_run_timeout) = millis();
+                  id(manual_run).publish_state(false);
+            else:
+              # Force Off is not active - proceed with Emergency Heat activation
+              - logger.log: "Emergency Heat enabled - 15 minute emergency heating"
+              - lambda: |-
                   id(manual_run_active) = true;
-                  ESP_LOGI("MANUAL_RUN", "Activated - 15-min timer started at %lu ms", id(manual_run_timeout));
-                  // Update switch state to reflect the change
-                  id(manual_run).publish_state(true);
-              - script.execute: manage_heating
+                  id(relay).turn_on();
+                  id(manual_run).publish_state(true);  // Explicitly publish ON state
+                  ESP_LOGI("MANUAL_RUN", "Activated - Relay ON (15-min delay timer started)");
+              - script.execute: manual_run_timer  # Start 15-minute delay timer
+              - script.execute: apply_priority_overrides
     turn_off_action:
       then:
-        - logger.log: "Manual Run disabled"
+        - logger.log: "Manual Run disabled by user"
         - lambda: |-
-            id(manual_run_timeout) = 0;
             id(manual_run_active) = false;
-            ESP_LOGI("MANUAL_RUN", "Deactivated by user");
-            // Update switch state to reflect the change
-            id(manual_run).publish_state(false);
-        - script.execute: manage_heating
+            // Turn off relay immediately when switch is turned off
+            id(relay).turn_off();
+            ESP_LOGI("MANUAL_RUN", "Deactivated by user - Relay OFF");
+        - script.stop: manual_run_timer  # Stop the timer if still running
+        - script.execute: apply_priority_overrides
 
   # Manual Stop Override (Force heating off indefinitely)
   - platform: template
@@ -96,25 +99,36 @@ switch:
     id: manual_stop
     icon: "mdi:power-off"
     restore_mode: ALWAYS_OFF
+    optimistic: true
     assumed_state: false
     turn_on_action:
       then:
-        - logger.log: "Manual Stop enabled - Heating disabled"
+        - logger.log: "Force Off enabled - Heating disabled"
         - lambda: |-
             id(manual_stop_active) = true;
-            // Deactivate Manual Run (mutually exclusive)
-            if (id(manual_run_active)) {
-              ESP_LOGI("MANUAL_STOP", "Deactivating Manual Run (mutually exclusive)");
-              id(manual_run_active) = false;
-              id(manual_run_timeout) = 0;
-              id(manual_run).publish_state(false);
-            }
             id(relay).turn_off();
-            ESP_LOGI("MANUAL_STOP", "Enabled - Relay OFF indefinitely");
-        - script.execute: update_relay_state
+            id(manual_stop).publish_state(true);  // Explicitly publish ON state
+            ESP_LOGI("MANUAL_STOP", "Force Off enabled - Relay OFF indefinitely");
+        - script.execute: apply_priority_overrides
     turn_off_action:
       then:
-        - logger.log: "Manual Stop disabled - Restoring normal control"
+        - logger.log: "Force Off disabled - Restoring normal control"
         - lambda: |-
             id(manual_stop_active) = false;
-        - script.execute: manage_heating
+            ESP_LOGI("MANUAL_STOP", "Force Off disabled - Normal control resumed");
+        - script.execute: apply_priority_overrides
+
+  # Heating Schedule Enable/Disable
+  - platform: template
+    name: "Heating Schedule"
+    id: schedule_enabled
+    icon: "mdi:calendar-clock"
+    restore_mode: ALWAYS_ON
+    optimistic: true
+    assumed_state: false
+    turn_on_action:
+      then:
+        - logger.log: "Heating schedule enabled"
+    turn_off_action:
+      then:
+        - logger.log: "Heating schedule disabled"
