--- a/gazebo_stove.yaml
+++ b/gazebo_stove.yaml
@@ -1,202 +1,14 @@
-esphome:
-  name: gazebo-stove
-  friendly_name: Gazebo Stove
-  on_boot:
-    priority: 600
-    then:
-      - logger.log: "Gazebo Stove Starting"
-      # Initialize globals from Home Assistant if needed (placeholder)
-      # In this config, we use defaults, but in a real scenario we might pull from HA
+# Gazebo Stove Entry Point
+# All configuration is handled in the included packages
 
-esp32:
-  board: wemos_d1_mini32
 
-logger:
-  level: DEBUG
-  logs:
-    uart.debug: DEBUG
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  ap:
-    ssid: "Gazebo-Stove Fallback"
-    password: "gazebo1234"
-
-api:
-
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
-# Global Variables
-globals:
-  - id: desired_temp
-    type: float
-    restore_value: no
-    initial_value: '22.0'
-  - id: temp_offset
-    type: float
-    restore_value: no
-    initial_value: '0.0'
-  - id: bad_read_count
-    type: int
-    restore_value: no
-    initial_value: '0'
-
-# Time Synchronization
-time:
-  - platform: sntp
-    id: sntp_time
-    servers:
-      - us.pool.ntp.org
-      - time.nist.gov
-    timezone: America/New_York
-    on_time_sync:
-      then:
-        - logger.log: "Time synced"
-
-# UART for Nextion Display
-uart:
-  - id: uart_nextion
-    tx_pin: GPIO17
-    rx_pin: GPIO16
-    baud_rate: 9600
-
-# OneWire Bus
-one_wire:
-  - platform: gpio
-    id: ow_bus
-    pin: GPIO4
-
-# Sensors
-sensor:
-  # DS18B20 Temperature Sensor
-  - platform: dallas_temp
-    one_wire_id: ow_bus
-    id: gazebo_temp
-    name: "Gazebo DS18B20"
-    address: 0x0000000000000000  # Placeholder address - must be updated after discovery
-    resolution: 12
-    filters:
-      - throttle_average: 10s
-      - lambda: |-
-          if (isnan(x)) {
-            id(bad_read_count) += 1;
-            if (id(bad_read_count) > 10) {
-              id(sensor_malfunction).publish_state(true);
-            }
-            return {};
-          }
-          id(bad_read_count) = 0;
-          if (id(sensor_malfunction).state) {
-            id(sensor_malfunction).publish_state(false);
-          }
-          // Apply offset
-          return x + id(temp_offset).state;
-      - clamp:
-          min_value: -40
-          max_value: 85
-      - delta: 1.0
-
-  # WiFi Signal
-  - platform: wifi_signal
-    name: "Gazebo WiFi Signal"
-    update_interval: 60s
-
-# Binary Sensors
-binary_sensor:
-  - platform: template
-    id: sensor_malfunction
-    name: "Sensor Malfunction"
-    on_state:
-      then:
-        - if:
-            condition:
-              binary_sensor.is_on: sensor_malfunction
-            then:
-              - switch.turn_off: relay
-              - logger.log: "SENSOR MALFUNCTION - Relay disabled"
-
-# Text Sensors
-text_sensor:
-  # WiFi Info
-  - platform: wifi_info
-    ip_address:
-      name: "Gazebo IP"
-    ssid:
-      name: "Gazebo SSID"
-    bssid:
-      name: "Gazebo BSSID"
-
-  # Status Message for Display
-  - platform: template
-    id: status_msg
-    update_interval: 1s
-    lambda: |-
-      if (id(sensor_malfunction).state) {
-        return "<<< SENSOR MALFUNCTION >>>";
-      }
-      if (id(manual_run).state) {
-        return "MANUAL MODE";
-      }
-      return "OK";
-
-  # Current Time String
-  - platform: template
-    id: current_time
-    update_interval: 1s
-    lambda: |-
-      return id(sntp_time).now().strftime("%H:%M:%S");
-
-# Switches
-switch:
-  # Physical Relay
-  - platform: gpio
-    id: relay
-    pin: GPIO12
-    name: "Gazebo Relay"
-    restore_mode: ALWAYS_OFF
-    icon: mdi:fire
-
-  # Manual Run Virtual Switch
-  - platform: template
-    id: manual_run
-    name: "Manual Run"
-    turn_on_action:
-      - switch.turn_on: relay
-      - logger.log: "Manual Run activated"
-    turn_off_action:
-      - switch.turn_off: relay
-      - logger.log: "Manual Run deactivated"
-
-# Climate Control
-climate:
-  - platform: thermostat
-    name: "Gazebo Thermostat"
-    sensor: gazebo_temp
-    preset:
-      - name: Normal
-        default_target_temperature_low: 22
-    min_heating_off_time: 60s
-    min_heating_run_time: 60s
-    min_idle_time: 60s
-    heat_deadband: 0.5
-    heat_overrun: 0.5
-    heat_action:
-      - switch.turn_on: relay
-    idle_action:
-      - switch.turn_off: relay
-
-# Nextion Display
-display:
-  - platform: nextion
-    uart_id: uart_nextion
-    id: gazebo_nextion
-    tft_url: "http://192.168.2.10/gazebo.tft"
-    lambda: |-
-      // Update display components
-      // Note: Ensure 'three.n1' is accessible (Page 3 active or component is global)
-      it.set_component_value("three.n1", int(id(gazebo_temp).state + id(temp_offset).state));
-      it.set_component_value("three.n0", (int)id(desired_temp).state);
-      it.set_component_text("status_text", id(status_msg).state.c_str());
+# Include modular configuration files
+packages:
+  core: !include includes/core.yaml
+  hardware: !include includes/hardware.yaml
+  sensors: !include includes/sensors.yaml
+  entities: !include includes/entities.yaml
+  automation: !include includes/automation.yaml
+  display: !include includes/display.yaml
+  climate: !include includes/climate.yaml
+  buttons: !include includes/buttons.yaml
