--- a/includes/automation.yaml
+++ b/includes/automation.yaml
@@ -10,13 +10,21 @@ script:
       - logger.log: "Initializing Nextion display..."
       - lambda: |-
           if (id(gazebo_nextion).is_failed() == false) {
+            id(gazebo_nextion).send_command("bkcmd=3"); // Enable return data
             id(gazebo_nextion).send_command("cls 0x0000");
-            ESP_LOGI("NEXTION_INIT", "Display cleared");
+            id(gazebo_nextion).send_command("page 0"); // Force Page 0 (ID 0)
+            ESP_LOGI("NEXTION_INIT", "Display cleared and switched to Page 0");
 
             // Update Page 0 with initial values
+            // Temperature
+            id(gazebo_nextion).send_command_printf("zero.temp.val=%d", (int)id(gazebo_temp).state);
             id(gazebo_nextion).send_command_printf("temp.val=%d", (int)id(gazebo_temp).state);
-            id(gazebo_nextion).send_command_printf("n0.val=%d", (int)id(gazebo_temp).state);
-            id(gazebo_nextion).send_command_printf("n1.val=%d", (int)id(desired_temp).state);
+            
+            // Humidity/Precip
+            if (!isnan(id(gazebo_humidity).state)) {
+              id(gazebo_nextion).send_command_printf("zero.precip.val=%d", (int)id(gazebo_humidity).state);
+              id(gazebo_nextion).send_command_printf("precip.val=%d", (int)id(gazebo_humidity).state);
+            }
 
             ESP_LOGI("NEXTION_INIT", "Display initialization complete");
           } else {
@@ -183,3 +191,22 @@ interval:
                     return !id(manual_run_active) && id(manual_run_timeout) == 0;
                 then:
                   - script.execute: disable_manual_run
+
+  # Periodic Display Refresh (every 5s)
+  - interval: 5s
+    then:
+      - lambda: |-
+          if (id(gazebo_nextion).is_failed() == false) {
+             // Refresh Temperature
+             if (!isnan(id(gazebo_temp).state)) {
+               int t = (int)id(gazebo_temp).state;
+               id(gazebo_nextion).send_command_printf("zero.temp.val=%d", t);
+               id(gazebo_nextion).send_command_printf("temp.val=%d", t);
+             }
+             // Refresh Humidity
+             if (!isnan(id(gazebo_humidity).state)) {
+               int h = (int)id(gazebo_humidity).state;
+               id(gazebo_nextion).send_command_printf("zero.precip.val=%d", h);
+               id(gazebo_nextion).send_command_printf("precip.val=%d", h);
+             }
+          }
