--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -24,8 +24,8 @@ sensor:
       - clamp:
           min_value: -40
           max_value: 85
-      # Rate limiting: max ±1°C change per reading
-      - delta: 1.0
+      # Rate limiting removed for debugging
+      #- delta: 1.0
 
     # Bad read detection and heating control
     on_value:
@@ -55,25 +55,25 @@ sensor:
               lambda: |-
                 return !isnan(x);
             then:
-              - lambda: |-
-                  auto* climate = id(propane_stove_thermostat);
+              - lambda: !lambda |-
+                  auto* climate = id(gazebo_thermostat);
                   if (climate != nullptr) {
                     climate->publish_state();
                     ESP_LOGD("CLIMATE_SYNC", "Climate state republished with temperature: %.1f°C", x);
                   }
               # Check if relay should be on/off based on current climate state
-              - script.execute: apply_priority_overrides
+              - script.execute: manage_heating
         # Update Nextion display - Try ALL common component names with page prefix
+        # Update Nextion display
+        # Update Nextion display
+        # Update Nextion display
         - lambda: |-
             if (id(gazebo_nextion).is_failed() == false) {
-              ESP_LOGD("NEXTION_DEBUG", "Sending temp %.1f to display (Page 0)", x);
-              // Try Number components with page prefix
-              id(gazebo_nextion).send_command_printf("page0.temp.val=%d", (int)x);
-              id(gazebo_nextion).send_command_printf("page0.n0.val=%d", (int)x);
-              id(gazebo_nextion).send_command_printf("page0.n1.val=%d", (int)x);
-              // Try Text components with page prefix
-              id(gazebo_nextion).send_command_printf("page0.t0.txt=\"%.0f\"", x);
-              id(gazebo_nextion).send_command_printf("page0.t1.txt=\"%.0f\"", x);
+              ESP_LOGD("NEXTION_DEBUG", "Sending temp %.1f to display", x);
+              // Update 'temp' component on Page 'zero'
+              id(gazebo_nextion).send_command_printf("zero.temp.val=%d", (int)x);
+              // Also try local update in case page is active
+              id(gazebo_nextion).send_command_printf("temp.val=%d", (int)x);
             }
 
   # WiFi Signal Strength
@@ -83,3 +83,19 @@ sensor:
     update_interval: 60s
     unit_of_measurement: "dBm"
     entity_category: "diagnostic"
+
+  # Import Humidity from Home Assistant
+  - platform: homeassistant
+    id: gazebo_humidity
+    entity_id: sensor.gazebo_current_humidity
+    internal: true
+    on_value:
+      then:
+        - lambda: |-
+            if (id(gazebo_nextion).is_failed() == false) {
+              ESP_LOGD("NEXTION_DEBUG", "Sending humidity %.1f%% to display", x);
+              // Update 'precip' component on Page 'zero'
+              id(gazebo_nextion).send_command_printf("zero.precip.val=%d", (int)x);
+              // Also try local update
+              id(gazebo_nextion).send_command_printf("precip.val=%d", (int)x);
+            }
