--- a/includes/core.yaml
+++ b/includes/core.yaml
@@ -75,7 +75,7 @@ time:
       - 0.ca.pool.ntp.org
       - 1.ca.pool.ntp.org
       - 2.ca.pool.ntp.org
-    timezone: America/Toronto
+    timezone: America/Edmonton
     on_time_sync:
       then:
         - logger.log: "Time synced from NTP"
