--- a/includes/entities.yaml
+++ b/includes/entities.yaml
@@ -184,3 +184,34 @@ globals:
     type: bool
     restore_value: no
     initial_value: 'false'
+
+# ============================================================================
+# SCHEDULING - On-Device Logic
+# ============================================================================
+
+switch:
+  - platform: template
+    name: "Enable Schedule"
+    id: enable_schedule
+    icon: "mdi:calendar-clock"
+    restore_mode: RESTORE_DEFAULT_ON
+    optimistic: true
+    turn_on_action:
+      - logger.log: "Schedule Logic Enabled"
+    turn_off_action:
+      - logger.log: "Schedule Logic Disabled"
+
+text_sensor:
+  # Import Home Time from HA
+  - platform: homeassistant
+    name: "Home Mode Time (HA)"
+    id: ha_home_time
+    entity_id: input_datetime.home_mode_time
+    internal: true # Don't need to expose back to HA
+
+  # Import Away Time from HA
+  - platform: homeassistant
+    name: "Away Mode Time (HA)"
+    id: ha_away_time
+    entity_id: input_datetime.away_mode_time
+    internal: true
