--- a/includes/hardware.yaml
+++ b/includes/hardware.yaml
@@ -123,3 +123,15 @@ switch:
             ESP_LOGI("MANUAL_STOP", "Disabled - Heating control restored");
             id(manual_stop).publish_state(false);
         - script.execute: manage_heating
+
+  # Schedule Enable Switch
+  - platform: template
+    name: "Enable Schedule"
+    id: enable_schedule
+    icon: "mdi:calendar-clock"
+    restore_mode: RESTORE_DEFAULT_ON
+    optimistic: true
+    turn_on_action:
+      - logger.log: "Schedule Logic Enabled"
+    turn_off_action:
+      - logger.log: "Schedule Logic Disabled"
