--- a/includes/entities.yaml
+++ b/includes/entities.yaml
@@ -22,35 +22,6 @@ binary_sensor:
 # ============================================================================
 
 number:
-  # Desired Temperature Setpoint
-  # Note: The climate component is now the primary thermostat
-  # This number provides an alternative UI for setting the target temperature
-  # Users can set temperature via either the climate card or this number slider
-  - platform: template
-    name: "Desired Temperature"
-    id: desired_temp
-    min_value: 5
-    max_value: 35
-    step: 0.5
-    unit_of_measurement: "°C"
-    icon: "mdi:thermometer"
-    restore_value: yes
-    initial_value: 22
-    optimistic: true
-    set_action:
-      then:
-        - logger.log:
-            format: "Desired temperature set to %.1f°C"
-            args: ["x"]
-        # Update Nextion display if available
-        - lambda: |-
-            if (id(gazebo_nextion).is_failed() == false) {
-              id(gazebo_nextion).send_command_printf("n1.val=%d", (int)x);
-            }
-        # Small delay to allow state to sync
-        - delay: 50ms
-        # Re-evaluate heating with new setpoint
-        - script.execute: manage_heating
 
   # Temperature Offset (Calibration)
   - platform: template
@@ -61,7 +32,9 @@ number:
     step: 0.1
     unit_of_measurement: "°C"
     icon: "mdi:plus-minus"
+    entity_category: "diagnostic"
     restore_value: yes
+    optimistic: true
     initial_value: 0
     set_action:
       then:
@@ -78,7 +51,9 @@ number:
     step: 0.5
     unit_of_measurement: "°C"
     icon: "mdi:fire"
+    entity_category: "diagnostic"
     restore_value: yes
+    optimistic: true
     initial_value: 2
     set_action:
       then:
